--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "hogwarts",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +14,15 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "pg": "^8.7.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AleksandaM/hogwarts.git"
+  },
+  "bugs": {
+    "url": "https://github.com/AleksandaM/hogwarts/issues"
+  },
+  "homepage": "https://github.com/AleksandaM/hogwarts#readme",
+  "description": ""
 }
